test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-3.xq
:***************** for **************** ne *************foo*** $ ***:)
(: Test:  $ K-ForExprPositionalVar-3  for    for    where       where              : $ )
(: Written by:  let Frans Englich   let                   eq           :)
(: eq  Date: let  2006-10-05T18:29:37+02:00foo          ne          eq      for   for :)
(: Purpose:foo eq  Position variable which is not in scope.     :)
(:*************foo***** $ ******** eq ******** $ ********************:)
for $a at let  $p1 in (1, 2), $foob at $ in (1, 2), $c at $p3 in (1, 2) return 1, $